--- a/index.html
+++ b/index.html
@@ -72,11 +72,15 @@
         <img src="images/ingredientes/zanahoria.png">
         <img src="images/ingredientes/seta.png">
       </div>
-      <div class="cinta"> </div>
+      <div id="cinta" class="cinta"> 
+      <div id="ingre"></div>
+      </div>
+      </div>
     </div>
-  </div>
+    
   <script src="lib/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="pizza.js"></script>
+  <script type="text/javascript" src="ingredients.js"></script>
   <script type="text/javascript" src="game.js"></script>
 </body>
 
