--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="lib/jquery-3.1.1.min.js"></script>
   <link rel="stylesheet" href="start-page.css">
   <title>Giorgio's Kitchen</title>
 </head>
 
 <body>
-  <div>
     <div class="game-page">
       <img src="images/pizza-peperonni.png" id="pizza-btn" class="pizza-start">
       <div class="title">
@@ -37,7 +37,7 @@
         <img src="images/ingredientes/zanahoria.png">
       </div>
       <div id="pepperoni">
-          <h2>Today's Pizza</h2>
+        <h2>Today's Pizza</h2>
         <h3>Pepperoni Pizza</h3>
         <img src="images/ingredientes/queso.png">
         <img src="images/ingredientes/tocino.png">
@@ -46,7 +46,7 @@
         <img src="images/ingredientes/tomate.png">
       </div>
       <div id="veggie">
-          <h2>Today's Pizza</h2>
+        <h2>Today's Pizza</h2>
         <h3>Veggie Pizza</h3>
         <img src="images/ingredientes/queso.png">
         <img src="images/ingredientes/tocino.png">
@@ -55,7 +55,7 @@
         <img src="images/ingredientes/seta.png">
       </div>
       <div id="tuna">
-          <h2>Today's Pizza</h2>
+        <h2>Today's Pizza</h2>
         <h3>Tuna Pizza</h3>
         <img src="images/ingredientes/queso.png">
         <img src="images/ingredientes/tocino.png">
@@ -64,7 +64,7 @@
         <img src="images/ingredientes/tomate.png">
       </div>
       <div id="diabola">
-          <h2>Today's Pizza</h2>
+        <h2>Today's Pizza</h2>
         <h3>Diabola Pizza</h3>
         <img src="images/ingredientes/queso.png">
         <img src="images/ingredientes/pepperoni.png">
@@ -72,16 +72,20 @@
         <img src="images/ingredientes/zanahoria.png">
         <img src="images/ingredientes/seta.png">
       </div>
-      <div id="cinta" class="cinta"> 
-      <div id="ingre"></div>
-      </div>
-      </div>
-    </div>
-    
-  <script src="lib/jquery-3.1.1.min.js"></script>
+      <div>
+        <div id="cinta" class="cinta" > 
+          <div id="ingre">
+          </div>
+        </div>
+        <div class="caja-pizza">
+         <img src="images/caja-pizza.png">
+        </div>
+       </div>
+  </div>
   <script type="text/javascript" src="pizza.js"></script>
   <script type="text/javascript" src="ingredients.js"></script>
   <script type="text/javascript" src="game.js"></script>
 </body>
 
 </html>
+
