ingredients random appear

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       <div class="pizarra">
         <img src="images/pizarra.jpg">
         <p>Instructions</p>
+        <ul>
+          <li>Hay hambre, queremos pizza</li>
+          <li>Mueve cada ingrediente a la caja</li>
+          <li>No elijas los que no son <br>o Giorgio se enfadará</li>
+          <li>Consigue bonificaciones</li>
+          <li>Corre, se acaba el tiempo</li>
+        </ul>
       </div>
       <div id="all-in">
         <h2>Today's Pizza</h2>
@@ -72,12 +79,13 @@
         <img src="images/ingredientes/zanahoria.png">
         <img src="images/ingredientes/seta.png">
       </div>
-      <div>
+      <div id="content">
         <div id="cinta" class="cinta" > 
+          <div id="caja"></div>
           <div id="ingre">
           </div>
         </div>
-        <div class="caja-pizza">
+        <div class="caja-pizza" id="caja-pizza">
          <img src="images/caja-pizza.png">
         </div>
        </div>
