--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="lib/jquery-3.1.1.min.js"></script>
-  <link rel="stylesheet" href="start-page.css">
+  <link rel="stylesheet" href="style/start-page.css">
   <title>Giorgio's Kitchen</title>
 </head>
 
@@ -90,9 +90,9 @@
         </div>
        </div>
   </div>
-  <script type="text/javascript" src="pizza.js"></script>
-  <script type="text/javascript" src="ingredients.js"></script>
-  <script type="text/javascript" src="game.js"></script>
+  <script type="text/javascript" src="JavaScript/pizza.js"></script>
+  <script type="text/javascript" src="JavaScript/ingredients.js"></script>
+  <script type="text/javascript" src="JavaScript/game.js"></script>
 </body>
 
 </html>
