aparecen ingredientes en la pizza

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
         </div>
         <div class="caja-pizza" id="caja-pizza">
          <img src="images/caja-pizza.png">
+         <img class="ingre-queso" src="images/ingredientes/queso.png">
+         <img class="ingre-tomate" src="images/ingredientes/tomate.png">
         </div>
        </div>
   </div>
