--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="lib/jquery-3.1.1.min.js"></script>
+  <link rel="stylesheet" href="style/ingredients-pizza.css">
   <link rel="stylesheet" href="style/start-page.css">
   <title>Giorgio's Kitchen</title>
 </head>
@@ -21,7 +22,6 @@
       </div>
       <div class="pizarra">
         <img src="images/pizarra.jpg">
-        <p>Instructions</p>
         <ul>
           <li>Hay hambre, queremos pizza</li>
           <li>Mueve cada ingrediente a la caja</li>
@@ -36,7 +36,7 @@
         <img src="images/ingredientes/queso.png">
         <img src="images/ingredientes/tocino.png">
         <img src="images/ingredientes/tomate.png">
-        <img src="images/ingredientes/tocino.png">
+        <img src="images/ingredientes/pepperoni.png">
         <img src="images/ingredientes/piña.png">
         <img src="images/ingredientes/limon.png">
         <img src="images/ingredientes/seta.png">
@@ -55,17 +55,18 @@
       <div id="veggie">
         <h2>Today's Pizza</h2>
         <h3>Veggie Pizza</h3>
-        <img src="images/ingredientes/queso.png">
-        <img src="images/ingredientes/tocino.png">
-        <img src="images/ingredientes/pepperoni.png">
-        <img src="images/ingredientes/pimienta.png">
+        <img src="images/ingredientes/lechuga.png">
+        <img src="images/ingredientes/piña.png">
+        <img src="images/ingredientes/manzana.png">
+        <img src="images/ingredientes/zanahoria.png">
         <img src="images/ingredientes/seta.png">
+        <img src="images/ingredientes/tomate.png">
       </div>
       <div id="tuna">
         <h2>Today's Pizza</h2>
         <h3>Tuna Pizza</h3>
         <img src="images/ingredientes/queso.png">
-        <img src="images/ingredientes/tocino.png">
+        <img src="images/ingredientes/queso2.png">
         <img src="images/ingredientes/pescado.png">
         <img src="images/ingredientes/piña.png">
         <img src="images/ingredientes/tomate.png">
@@ -85,10 +86,17 @@
           <div id="ingre">
           </div>
         </div>
-        <div class="caja-pizza" id="caja-pizza">
-         <img src="images/caja-pizza.png">
+        <div>
+         <img class="caja-pizza" id="caja-pizza" src="images/caja-pizza.png">
          <img class="ingre-queso" src="images/ingredientes/queso.png">
          <img class="ingre-tomate" src="images/ingredientes/tomate.png">
+         <img class="ingre-piña" src="images/ingredientes/piña.png">
+         <img class="ingre-pescado" src="images/ingredientes/pescado.png">
+         <img class="ingre-zanahoria" src="images/ingredientes/zanahoria.png">
+         <img class="ingre-tocino" src="images/ingredientes/tocino.png">
+         <img class="ingre-pepperoni" src="images/ingredientes/pepperoni.png">
+         <img class="ingre-seta" src="images/ingredientes/seta.png">
+         <img class="ingre-manzana" src="images/ingredientes/manzana.png">
         </div>
        </div>
   </div>
