--- a/index.html
+++ b/index.html
@@ -8,102 +8,104 @@
   <script src="lib/jquery-3.1.1.min.js"></script>
   <link rel="stylesheet" href="style/ingredients-pizza.css">
   <link rel="stylesheet" href="style/start-page.css">
+  <link rel="stylesheet" href="style/pizza.css">
   <title>Giorgio's Kitchen</title>
 </head>
 
 <body>
-    <div class="game-page">
-      <img src="images/pizza-peperonni.png" id="pizza-btn" class="pizza-start">
-      <div class="title">
-        <h1>Giorgio's Kitchen</h1>
+  <div class="game-page">
+    <img src="images/pizza-peperonni.png" id="pizza-btn" class="pizza-start">
+    <div class="title">
+      <h1>Giorgio's Kitchen</h1>
+    </div>
+    <div>
+      <img src="images/cocinero.png" class="cocinero">
+    </div>
+    <div class="pizarra">
+      <img src="images/pizarra.jpg">
+      <ul>
+        <li>Hay hambre, queremos pizza</li>
+        <li>Mueve cada ingrediente a la caja</li>
+        <li>No elijas los que no son <br>o Giorgio se enfadará</li>
+        <li>Consigue bonificaciones</li>
+        <li>Corre, se acaba el tiempo</li>
+      </ul>
+    </div>
+    <div id="tocino">
+      <h2>Today's Pizza</h2>
+      <h3>Carne</h3>
+      <img src="images/ingredientes/queso.png">
+      <img src="images/ingredientes/tocino.png">
+      <img src="images/ingredientes/tomate.png">
+      <img src="images/ingredientes/pepperoni.png">
+      <img src="images/ingredientes/piña.png">
+      <img src="images/ingredientes/limon.png">
+      <img src="images/ingredientes/seta.png">
+      <img src="images/ingredientes/manzana.png">
+      <img src="images/ingredientes/zanahoria.png">
+    </div>
+    <div id="pepperoni">
+      <h2>Today's Pizza</h2>
+      <h3>Pepperoni Pizza</h3>
+      <img src="images/ingredientes/queso.png">
+      <img src="images/ingredientes/tocino.png">
+      <img src="images/ingredientes/pepperoni.png">
+      <img src="images/ingredientes/manzana.png">
+      <img src="images/ingredientes/tomate.png">
+    </div>
+    <div id="seta">
+      <h2>Today's Pizza</h2>
+      <h3>Boletus Pizza</h3>
+      <img src="images/ingredientes/lechuga.png">
+      <img src="images/ingredientes/piña.png">
+      <img src="images/ingredientes/manzana.png">
+      <img src="images/ingredientes/zanahoria.png">
+      <img src="images/ingredientes/seta.png">
+      <img src="images/ingredientes/tomate.png">
+    </div>
+    <div id="pescado">
+      <h2>Today's Pizza</h2>
+      <h3>Tuna Pizza</h3>
+      <img src="images/ingredientes/queso.png">
+      <img src="images/ingredientes/pescado.png">
+      <img src="images/ingredientes/piña.png">
+      <img src="images/ingredientes/tomate.png">
+    </div>
+    <div id="queso">
+      <h2>Today's Pizza</h2>
+      <h3>Diabola Pizza</h3>
+      <img src="images/ingredientes/queso.png">
+      <img src="images/ingredientes/pepperoni.png">
+      <img src="images/ingredientes/pimienta.png">
+      <img src="images/ingredientes/zanahoria.png">
+      <img src="images/ingredientes/seta.png">
+    </div>
+    <div id="content">
+      <div id="cinta" class="cinta">
+        <div id="caja"></div>
+        <div id="ingre">
+        </div>
       </div>
       <div>
-        <img src="images/cocinero.png" class="cocinero">
+        <img class="caja-pizza" id="caja-pizza" src="images/caja-pizza.png">
+        <img class="ingre-queso" src="images/ingredientes/queso.png">
+        <img class="ingre-tomate" src="images/ingredientes/tomate.png">
+        <img class="ingre-piña" src="images/ingredientes/piña.png">
+        <img class="ingre-pescado" src="images/ingredientes/pescado.png">
+        <img class="ingre-zanahoria" src="images/ingredientes/zanahoria.png">
+        <img class="ingre-tocino" src="images/ingredientes/tocino.png">
+        <img class="ingre-pepperoni" src="images/ingredientes/pepperoni.png">
+        <img class="ingre-seta" src="images/ingredientes/seta.png">
+        <img class="ingre-manzana" src="images/ingredientes/manzana.png">
+        <img class="ingre-pimienta" src="images/ingredientes/pimienta.png">
       </div>
-      <div class="pizarra">
-        <img src="images/pizarra.jpg">
-        <ul>
-          <li>Hay hambre, queremos pizza</li>
-          <li>Mueve cada ingrediente a la caja</li>
-          <li>No elijas los que no son <br>o Giorgio se enfadará</li>
-          <li>Consigue bonificaciones</li>
-          <li>Corre, se acaba el tiempo</li>
-        </ul>
+      <div class="guy">
+        <img src="images/guy3.png">
       </div>
-      <div id="all-in">
-        <h2>Today's Pizza</h2>
-        <h3>All In</h3>
-        <img src="images/ingredientes/queso.png">
-        <img src="images/ingredientes/tocino.png">
-        <img src="images/ingredientes/tomate.png">
-        <img src="images/ingredientes/pepperoni.png">
-        <img src="images/ingredientes/piña.png">
-        <img src="images/ingredientes/limon.png">
-        <img src="images/ingredientes/seta.png">
-        <img src="images/ingredientes/manzana.png">
-        <img src="images/ingredientes/zanahoria.png">
-      </div>
-      <div id="pepperoni">
-        <h2>Today's Pizza</h2>
-        <h3>Pepperoni Pizza</h3>
-        <img src="images/ingredientes/queso.png">
-        <img src="images/ingredientes/tocino.png">
-        <img src="images/ingredientes/pepperoni.png">
-        <img src="images/ingredientes/manzana.png">
-        <img src="images/ingredientes/tomate.png">
-      </div>
-      <div id="veggie">
-        <h2>Today's Pizza</h2>
-        <h3>Veggie Pizza</h3>
-        <img src="images/ingredientes/lechuga.png">
-        <img src="images/ingredientes/piña.png">
-        <img src="images/ingredientes/manzana.png">
-        <img src="images/ingredientes/zanahoria.png">
-        <img src="images/ingredientes/seta.png">
-        <img src="images/ingredientes/tomate.png">
-      </div>
-      <div id="tuna">
-        <h2>Today's Pizza</h2>
-        <h3>Tuna Pizza</h3>
-        <img src="images/ingredientes/queso.png">
-        <img src="images/ingredientes/queso2.png">
-        <img src="images/ingredientes/pescado.png">
-        <img src="images/ingredientes/piña.png">
-        <img src="images/ingredientes/tomate.png">
-      </div>
-      <div id="diabola">
-        <h2>Today's Pizza</h2>
-        <h3>Diabola Pizza</h3>
-        <img src="images/ingredientes/queso.png">
-        <img src="images/ingredientes/pepperoni.png">
-        <img src="images/ingredientes/pimienta.png">
-        <img src="images/ingredientes/zanahoria.png">
-        <img src="images/ingredientes/seta.png">
-      </div>
-      <div id="content">
-        <div id="cinta" class="cinta" > 
-          <div id="caja"></div>
-          <div id="ingre">
-          </div>
-        </div>
-        <div>
-         <img class="caja-pizza" id="caja-pizza" src="images/caja-pizza.png">
-         <img class="ingre-queso" src="images/ingredientes/queso.png">
-         <img class="ingre-tomate" src="images/ingredientes/tomate.png">
-         <img class="ingre-piña" src="images/ingredientes/piña.png">
-         <img class="ingre-pescado" src="images/ingredientes/pescado.png">
-         <img class="ingre-zanahoria" src="images/ingredientes/zanahoria.png">
-         <img class="ingre-tocino" src="images/ingredientes/tocino.png">
-         <img class="ingre-pepperoni" src="images/ingredientes/pepperoni.png">
-         <img class="ingre-seta" src="images/ingredientes/seta.png">
-         <img class="ingre-manzana" src="images/ingredientes/manzana.png">
-        </div>
-       </div>
+    </div>
   </div>
-  <script type="text/javascript" src="JavaScript/pizza.js"></script>
   <script type="text/javascript" src="JavaScript/ingredients.js"></script>
   <script type="text/javascript" src="JavaScript/game.js"></script>
 </body>
 
 </html>
-
