todo vuelve a funcionar, hasta cuando...

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <img class="ingre-pimienta" src="images/ingredientes/pimienta.png">
       </div>
       <div class="guy">
-        <img src="images/guy3.png">
+        <img src="">
       </div>
     </div>
   </div>
