some sound implement

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <!-- <audio volume="0.5" src="audios/Musica Tradicional.mp3"
+    autoplay></audio> -->
   <div class="game-page">
     <img src="images/pizza-peperonni.png" id="pizza-btn" class="pizza-start">
     <div class="title">
@@ -31,7 +33,8 @@
         <li>Corre, se acaba el tiempo</li>
       </ul>
     </div>
-    <div id="tocino">
+    <div class="score">Ganancias: </div>
+    <div id="carne">
       <h2>Today's Pizza</h2>
       <h3>Carne</h3>
       <img src="images/ingredientes/queso.png">
@@ -39,12 +42,11 @@
       <img src="images/ingredientes/tomate.png">
       <img src="images/ingredientes/pepperoni.png">
       <img src="images/ingredientes/piña.png">
-      <img src="images/ingredientes/limon.png">
       <img src="images/ingredientes/seta.png">
       <img src="images/ingredientes/manzana.png">
       <img src="images/ingredientes/zanahoria.png">
     </div>
-    <div id="pepperoni">
+    <div id="picante">
       <h2>Today's Pizza</h2>
       <h3>Pepperoni Pizza</h3>
       <img src="images/ingredientes/queso.png">
@@ -53,7 +55,7 @@
       <img src="images/ingredientes/manzana.png">
       <img src="images/ingredientes/tomate.png">
     </div>
-    <div id="seta">
+    <div id="boletus">
       <h2>Today's Pizza</h2>
       <h3>Boletus Pizza</h3>
       <img src="images/ingredientes/lechuga.png">
@@ -63,7 +65,7 @@
       <img src="images/ingredientes/seta.png">
       <img src="images/ingredientes/tomate.png">
     </div>
-    <div id="pescado">
+    <div id="tuna">
       <h2>Today's Pizza</h2>
       <h3>Tuna Pizza</h3>
       <img src="images/ingredientes/queso.png">
@@ -71,7 +73,7 @@
       <img src="images/ingredientes/piña.png">
       <img src="images/ingredientes/tomate.png">
     </div>
-    <div id="queso">
+    <div id="diabola">
       <h2>Today's Pizza</h2>
       <h3>Diabola Pizza</h3>
       <img src="images/ingredientes/queso.png">
@@ -98,12 +100,13 @@
         <img class="ingre-seta" src="images/ingredientes/seta.png">
         <img class="ingre-manzana" src="images/ingredientes/manzana.png">
         <img class="ingre-pimienta" src="images/ingredientes/pimienta.png">
+        <img class="ingre-lechuga" src="images/ingredientes/lechuga.png">
       </div>
       <div class="guy">
-        <img src="">
       </div>
     </div>
   </div>
+  <script type="text/javascript" src="JavaScript/Audios.js"></script>
   <script type="text/javascript" src="JavaScript/ingredients.js"></script>
   <script type="text/javascript" src="JavaScript/game.js"></script>
 </body>
