--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
     <!-- <audio volume="0.5" src="audios/Musica Tradicional.mp3"
     autoplay></audio> -->
   <div class="game-page">
+    <div class="final-text">
+      <p> COMPLIMENTI! </p>
+      <p>Gracias por jugar, ahora comeremos pizza</p>
+      <p>Gracias a Ruben Armendiz y Maria Alonso por su tiempo</p>
+      <p>A Giorgio por su cara y su voz</p>
+      <p>Gracias a todos por jugar</p>
+    </div>
     <img src="images/pizza-peperonni.png" id="pizza-btn" class="pizza-start">
     <div class="title">
-      <h1>Giorgio's Kitchen</h1>
+      
     </div>
     <div>
       <img src="images/cocinero.png" class="cocinero">
@@ -30,7 +37,7 @@
         <li>Mueve cada ingrediente a la caja</li>
         <li>No elijas los que no son <br>o Giorgio se enfadará</li>
         <li>Consigue bonificaciones</li>
-        <li>Corre, se acaba el tiempo</li>
+        <li>Corre, tenemos hambre</li>
       </ul>
     </div>
     <div class="score">Ganancias: </div>
@@ -97,12 +104,10 @@
         <img class="ingre-seta" src="images/ingredientes/seta.png">
         <img class="ingre-manzana" src="images/ingredientes/manzana.png">
         <img class="ingre-pimienta" src="images/ingredientes/pimienta.png">
-        <img class="ingre-lechuga" src="images/ingredientes/ensalada.png">
+        <img class="ingre-ensalada" src="images/ingredientes/ensalada.png">
       </div>
       <div class="guy">
       </div>
-    </div>
-  </div>
   <script type="text/javascript" src="JavaScript/Audios.js"></script>
   <script type="text/javascript" src="JavaScript/ingredients.js"></script>
   <script type="text/javascript" src="JavaScript/game.js"></script>
