--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p>Gracias por jugar, ahora comeremos pizza</p>
       <p>Gracias a Ruben Armendiz y Maria Alonso por su tiempo</p>
       <p>A Giorgio por su cara y su voz</p>
-      <p>Gracias a todos por jugar</p>
+      <p>Gracias a todos</p>
     </div>
     <img src="images/pizza-peperonni.png" id="pizza-btn" class="pizza-start">
     <div class="title">
