--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <!-- <audio volume="0.5" src="audios/Musica Tradicional.mp3"
-    autoplay></audio> -->
+    <audio volume="0.5" src="audios/Musica Tradicional.mp3"
+    autoplay></audio>
   <div class="game-page">
     <div class="final-text">
       <p> COMPLIMENTI! </p>
