--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <audio volume="0.5" src="audios/Musica Tradicional.mp3"
-    autoplay></audio>
+    autoplay loop></audio>
   <div class="game-page">
     <div class="final-text">
       <p> COMPLIMENTI! </p>
