--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <img src="images/pizarra.jpg">
       <ul>
         <li>Hay hambre, queremos pizza</li>
-        <li>Mueve cada ingrediente a la caja</li>
+        <li>Haz CLICK en cada ingrediente</li>
         <li>No elijas los que no son <br>o Giorgio se enfadará</li>
         <li>Consigue bonificaciones</li>
         <li>Corre, tenemos hambre</li>
